--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
             >
               <h1>
                 Simple Buffet app <br />
-                <em>osi original</em>
+                <em>osn original</em>
               </h1>
               <p>
                 แอปพลิเคชั่นสำหรับสั่งอาหาร ไม่ว่าจะเป็นบุฟเฟ่ต์หมูกระทะ
