--- a/index.html
+++ b/index.html
@@ -511,7 +511,7 @@
           <div class="col-lg-12">
             <div class="sub-footer">
               <p>
-                Copyright &copy; 2024 OSN ORIGINAL APP | Designed by Pasit
+                Copyright &copy; 2024 OSN ORIGINAL APP | Designed by Pasit, Pongpat and Nattawat Co-pilot
               </p>
             </div>
           </div>
