--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                 หรือจะเป็น อะลาคาร์ท สั่งได้ในหน้าจอของคุณเลยตอนนี้
                 ประสบการณ์ของคุณคือหน้าที่ของเรา
                 เราจะทำให้มั่นใจว่าทุกช่วงเวลาของคุณที่นี่จะต้องดีที่สุด
-                แอปพลิเคชั่นสร้างโดย OSI Team
+                แอปพลิเคชั่นสร้างโดย OSN Team
               </p>
               <a href="#team" class="main-button-slider">OSI TEAM</a>
             </div>
