--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                 เราจะทำให้มั่นใจว่าทุกช่วงเวลาของคุณที่นี่จะต้องดีที่สุด
                 แอปพลิเคชั่นสร้างโดย OSN Team
               </p>
-              <a href="#team" class="main-button-slider">OSI TEAM</a>
+              <a href="#team" class="main-button-slider">OSN TEAM</a>
             </div>
           </div>
         </div>
